[package]
name = "shitty_website_watcher_KA"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
reqwest = "0.11.20"
pushover-rs = "0.3.14"
bytes = "1.5.0"
