[package]
name = "shitty-website-watcher-KA"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
pushover-rs = "0.3.14"
anyhow = "1.0.71"
chromiumoxide = { version = "0.4.0", features = ["tokio-runtime"], default-features = false }
image = "0.24.7"
image-compare = "0.3.1"

futures = "0.3.28" # needed for chrome oxide tokio handler thread